--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -4,6 +4,7 @@
              xmlns:local="clr-namespace:PL"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <local:ExperienceCollection x:Key="ExperienceCollectionKey" />
+        <local:ConvertIdToContent x:Key="ConverIdToContentKey" />
     </Application.Resources>
 </Application>
