--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -2,9 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PL"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainMenu.xaml">
     <Application.Resources>
         <local:ExperienceCollection x:Key="ExperienceCollectionKey" />
+        <local:StatusCollectionKey x:Key="StatusCollectionKey" />
         <local:ConvertIdToContent x:Key="ConverIdToContentKey" />
     </Application.Resources>
 </Application>
