Continue implementing step 5 and 6

--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -7,5 +7,7 @@
         <local:ExperienceCollection x:Key="ExperienceCollectionKey" />
         <local:StatusCollectionKey x:Key="StatusCollectionKey" />
         <local:ConvertIdToContent x:Key="ConverIdToContentKey" />
+        <!--<local:ConvertStatusToColor x:Key="ConvertStatusToColorKey" />
+        <local:ConvertStatusToForground x:Key="ConvertStatusToForgroundKey" />-->
     </Application.Resources>
 </Application>
