--- a/PL/Engineer/ListOfTask.xaml
+++ b/PL/Engineer/ListOfTask.xaml
@@ -6,18 +6,21 @@
         xmlns:local="clr-namespace:PL.Engineer"
         mc:Ignorable="d"
         Title="ListOfTask" Height="450" Width="800"
-             DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
-    
-    <Grid>
+        DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
+
+    <Grid Background="#f2f2f2">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="4*"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="תבחר את המשימה שאתה רוצה לעבוד עליה" ></TextBlock>     
-        <ListView Grid.Row="1" Margin="5" ItemsSource="{Binding TaskList}" 
-       PreviewMouseDoubleClick="ListView_MouseDoubleClick">
+        <!-- Header Section -->
+        <StackPanel Grid.Row="0" Background="#2196F3" VerticalAlignment="Center">
+            <TextBlock Text="תבחר את המשימה שאתה רוצה לעבוד עליה" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" Margin="0,20,0,10"/>
+        </StackPanel>
+
+        <!-- Content Section -->
+        <ListView Grid.Row="1" Margin="10" ItemsSource="{Binding TaskList}" PreviewMouseDoubleClick="ListView_MouseDoubleClick">
             <ListView.View>
                 <GridView AllowsColumnReorder="True">
                     <GridView.ColumnHeaderContainerStyle>
@@ -32,7 +35,6 @@
                     <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description}"/>
                     <GridViewColumn Header="Alias" DisplayMemberBinding="{Binding Alias}"/>
                     <GridViewColumn Header="Status" DisplayMemberBinding="{Binding Status}"/>
-                    
                 </GridView>
             </ListView.View>
         </ListView>
